# reqkit

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  reqdoc.py
.claude/skills/reqkit/: SKILL.md
docs/: spec.md  trace.md
src/reqkit/: __init__.py  cli.py  config.py  mint.py  parser.py  tracer.py  types.py
src/reqkit/reports/: table.py
tests/: test_cli.py  test_parser.py
tests/fixtures/reqkit/: code.md  requirements.md
tests/fixtures/reqkit/references/: cameo-requirements-modeler-plugin-user-guide.md
