[project]
name = "reqkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Garrett Gruss", email = "garrett.g.gruss@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
reqkit = "reqkit:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
