[project]
name = "reqkit"
version = "0.2.1"
description = "Reqkit offers a structured way to construct and track requirements within your project"
readme = "README.md"
authors = [
    { name = "Garrett Gruss", email = "garrett.g.gruss@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
reqkit = "reqkit:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
